test/test262/src/dstr-binding/error/async-gen-method-dflt.template
// Copyright (C) 2017 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
path: language/expressions/object/dstr-async-gen-meth-dflt-
name: async generator method (default parameter)
esid: sec-asyncgenerator-definitions-propertydefinitionevaluation
features: [async-iteration]
info: |
    AsyncGeneratorMethod :
        async [no LineTerminator here] * PropertyName ( UniqueFormalParameters )
            { AsyncGeneratorBody }

    1. Let propKey be the result of evaluating PropertyName.
    2. ReturnIfAbrupt(propKey).
    3. If the function code for this AsyncGeneratorMethod is strict mode code, let strict be true.
       Otherwise let strict be false.
    4. Let scope be the running execution context's LexicalEnvironment.
    5. Let closure be ! AsyncGeneratorFunctionCreate(Method, UniqueFormalParameters,
       AsyncGeneratorBody, scope, strict).
    [...]
---*/

var obj = {
  async *method(/*{ elems }*/ = /*{ vals }*/) {
    /*{ body }*/
  }
};

assert.throws(/*{ error }*/, function() {
  obj.method();
});
